# turboagent-minimal-demo

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  agent.py  config.py  embed.py  retrievers.py
scripts/: run_compare.py  run_plain_rag.py  run_turbo_rag.py
